package br.unitins.tp1.notebooks.modelo;


public enum Cor {
    PRETO,
    BRANCO,
    CINZA,
    AZUL,
    VERMELHO,
    PRATA;
}
